--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mike Newman's Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>TheRealMikeNew's Portfolio</title>
   </head>
   <body>
-    <div>About me</div>
+    <div id="about-me-container">
+      <img src="https://i.imgur.com/qhXgZFB.png" alt="TheRealMikeNew's photo" />
+      <div>
+        <h1>Michael Newman</h1>
+        <h2>Software Engineer</h2>
+        <p>Stuff here</p>
+      </div>
+    </div>
+
+    <div id="projects-container">
+      <h1 id="projects-title">Projects</h1>
+      <div id="projects-links-container">
+        <div class="projects">Project 1</div>
+        <div class="projects">Project 2</div>
+        <div class="projects">Project 3</div>
+      </div>
+    </div>
+
+    <footer id="footer-container">
+      <a href="">Link 1</a>
+      <a href="">Link 1</a>
+      <a href="">Link 1</a>
+    </footer>
   </body>
 </html>
