--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap"
+      rel="stylesheet"
+    />
+
     <title>TheRealMikeNew's Portfolio</title>
   </head>
   <body>
     <div id="about-me-container">
-      <img src="https://i.imgur.com/qhXgZFB.png" alt="TheRealMikeNew's photo" />
-      <div>
+      <img
+        id="about-me-photo"
+        src="https://i.imgur.com/qhXgZFB.png"
+        alt="TheRealMikeNew's photo"
+      />
+      <div id="about-me-description">
         <h1>Michael Newman</h1>
         <h2>Software Engineer</h2>
         <p>Stuff here</p>
@@ -20,16 +31,33 @@
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
       <div id="projects-links-container">
-        <div class="projects">Project 1</div>
-        <div class="projects">Project 2</div>
-        <div class="projects">Project 3</div>
+        <div class="projects">
+          <a href="https://my-so-called-civic-life.netlify.app/" target="_blank"
+            >My So-Called Civic Life</a
+          >
+          <p>Text here</p>
+        </div>
+        <div class="projects">
+          <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
+            >My Very Graphic Novels</a
+          >
+          <p>Text here</p>
+        </div>
+        <div class="projects">
+          <a href="https://snowbook.herokuapp.com/" target="_blank">snowBook</a>
+          <p>Text here</p>
+        </div>
+        <div class="projects">
+          <a href="https://greasy-camp.surge.sh/" target="_blank"
+            >Mike's Connect Four</a
+          >
+          <p>Text here</p>
+        </div>
       </div>
     </div>
 
     <footer id="footer-container">
-      <a href="">Link 1</a>
-      <a href="">Link 1</a>
-      <a href="">Link 1</a>
+      <a href="https://github.com/therealmikenew" target="" _blank>GitHub</a>
     </footer>
   </body>
 </html>
