add functions to index.js

--- a/index.html
+++ b/index.html
@@ -35,23 +35,52 @@
           <a href="https://my-so-called-civic-life.netlify.app/" target="_blank"
             >My So-Called Civic Life</a
           >
-          <p>Text here</p>
+          <img
+            id="first-project"
+            class="project-image"
+            src="assets/images/MySoCalled.png"
+            alt=""
+          />
+
+          <div id="first-project-text" style="display: none">Text here</div>
         </div>
+
         <div class="projects">
           <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
             >My Very Graphic Novels</a
           >
-          <p>Text here</p>
+          <img
+            id="second-project"
+            class="project-image"
+            src="assets/images/MyVeryGraphic.png"
+            alt=""
+          />
+          <div id="second-project-text" style="display: none">Text here</div>
         </div>
+
         <div class="projects">
           <a href="https://snowbook.herokuapp.com/" target="_blank">snowBook</a>
-          <p>Text here</p>
+          <img
+            id="third-project"
+            class="project-image"
+            src="assets/images/snowBook.png"
+            alt=""
+          />
+
+          <div id="third-project-text" style="display: none">Text here</div>
         </div>
+
         <div class="projects">
           <a href="https://greasy-camp.surge.sh/" target="_blank"
             >Mike's Connect Four</a
           >
-          <p>Text here</p>
+          <img
+            id="fourth-project"
+            class="project-image"
+            src="assets/images/ConnectFour.png"
+            alt=""
+          />
+          <div id="fourth-project-text" style="display: none">Text here</div>
         </div>
       </div>
     </div>
@@ -59,5 +88,6 @@
     <footer id="footer-container">
       <a href="https://github.com/therealmikenew" target="" _blank>GitHub</a>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
