--- a/index.html
+++ b/index.html
@@ -15,26 +15,29 @@
     <title>TheRealMikeNew's Portfolio</title>
   </head>
   <body>
-    <div id="about-me-container">
+    <div id="header-container">
       <img
-        id="about-me-photo"
+        id="header-photo"
         src="https://i.imgur.com/qhXgZFB.png"
         alt="TheRealMikeNew's photo"
       />
-      <div id="about-me-description">
+      <div id="header-description">
         <h1>Michael Newman</h1>
         <h2>Software Engineer</h2>
-        <p>Stuff here</p>
       </div>
+    </div>
+
+    <div id="about-container">
+      <h1>About Me</h1>
+      <p>Stuff here</p>
     </div>
 
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
       <div id="projects-links-container">
         <div class="projects">
-          <a href="https://my-so-called-civic-life.netlify.app/" target="_blank"
-            >My So-Called Civic Life</a
-          >
+          <h2>My So-Called Civic Life</h2>
+
           <img
             id="first-project"
             class="project-image"
@@ -42,24 +45,43 @@
             alt=""
           />
 
-          <div id="first-project-text" style="display: none">Text here</div>
+          <div id="first-project-text" style="display: none">
+            <a
+              href="https://my-so-called-civic-life.netlify.app/"
+              target="_blank"
+              >Netlify</a
+            >
+            <a
+              href="https://github.com/therealmikenew/my-so-called-civic-life"
+              target="_blank"
+              >GitHub</a
+            >
+          </div>
         </div>
 
         <div class="projects">
-          <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
-            >My Very Graphic Novels</a
-          >
+          <h2>My Very Graphic Novels</h2>
+
           <img
             id="second-project"
             class="project-image"
             src="assets/images/MyVeryGraphic.png"
             alt=""
           />
-          <div id="second-project-text" style="display: none">Text here</div>
+          <div id="second-project-text" style="display: none">
+            <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
+              >Heroku</a
+            >
+            <a
+              href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+              target="_blank"
+              >GitHub</a
+            >
+          </div>
         </div>
 
         <div class="projects">
-          <a href="https://snowbook.herokuapp.com/" target="_blank">snowBook</a>
+          <h2>snowBook</h2>
           <img
             id="third-project"
             class="project-image"
@@ -67,26 +89,40 @@
             alt=""
           />
 
-          <div id="third-project-text" style="display: none">Text here</div>
+          <div id="third-project-text" style="display: none">
+            <a href="https://snowbook.herokuapp.com/" target="_blank">Heroku</a>
+            <a
+              href="https://github.com/RobWilliams0615/snowBook"
+              target="_blank"
+              >GitHub</a
+            >
+          </div>
         </div>
 
         <div class="projects">
-          <a href="https://greasy-camp.surge.sh/" target="_blank"
-            >Mike's Connect Four</a
-          >
+          <h2>Mike's Connect Four</h2>
           <img
             id="fourth-project"
             class="project-image"
             src="assets/images/ConnectFour.png"
             alt=""
           />
-          <div id="fourth-project-text" style="display: none">Text here</div>
+          <div id="fourth-project-text" style="display: none">
+            <a href="https://greasy-camp.surge.sh/" target="_blank">Surge</a>
+            <a
+              href="https://github.com/therealmikenew/MikesConnectFour"
+              target="_blank"
+              >GitHub</a
+            >
+          </div>
         </div>
       </div>
     </div>
 
     <footer id="footer-container">
-      <a href="https://github.com/therealmikenew" target="" _blank>GitHub</a>
+      <a href="https://github.com/therealmikenew" target="_blank">
+        <img class="icon" src="assets/images/github.png" alt=""
+      /></a>
     </footer>
     <script src="index.js"></script>
   </body>
