edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a
               href="https://github.com/therealmikenew/my-so-called-civic-life"
               target="_blank"
-              >GitHub</a
-            >
+              ><img class="icon" src="assets/images/github.png" alt=""
+            /></a>
           </div>
         </div>
 
@@ -75,8 +75,8 @@
             <a
               href="https://github.com/therealmikenew/MyVeryGraphicNovels"
               target="_blank"
-              >GitHub</a
-            >
+              ><img class="icon" src="assets/images/github.png" alt=""
+            /></a>
           </div>
         </div>
 
@@ -94,8 +94,8 @@
             <a
               href="https://github.com/RobWilliams0615/snowBook"
               target="_blank"
-              >GitHub</a
-            >
+              ><img class="icon" src="assets/images/github.png" alt=""
+            /></a>
           </div>
         </div>
 
@@ -112,8 +112,8 @@
             <a
               href="https://github.com/therealmikenew/MikesConnectFour"
               target="_blank"
-              >GitHub</a
-            >
+              ><img class="icon" src="assets/images/github.png" alt=""
+            /></a>
           </div>
         </div>
       </div>
