edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
   </head>
   <body>
     <div id="header-container">
-      <img
-        id="header-photo"
-        src="https://i.imgur.com/qhXgZFB.png"
-        alt="TheRealMikeNew's photo"
-      />
+      <div id="header-photo">
+        <img
+          id="photo"
+          src="https://i.imgur.com/qhXgZFB.png"
+          alt="TheRealMikeNew's photo"
+          width="500"
+        />
+      </div>
+
       <div id="header-description">
         <h1>Michael Newman</h1>
         <h2>Software Engineer</h2>
