edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <a
               href="https://my-so-called-civic-life.netlify.app/"
               target="_blank"
-              >Netlify</a
-            >
+              ><img
+                class="icon"
+                src="assets/images/Netlify-Logo.wine.png"
+                alt=""
+            /></a>
             <a
               href="https://github.com/therealmikenew/my-so-called-civic-life"
               target="_blank"
@@ -74,8 +77,8 @@
           />
           <div id="second-project-text" style="display: none">
             <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
-              >Heroku</a
-            >
+              ><img class="icon" src="assets/images/heroku.png" alt=""
+            /></a>
             <a
               href="https://github.com/therealmikenew/MyVeryGraphicNovels"
               target="_blank"
@@ -94,7 +97,9 @@
           />
 
           <div id="third-project-text" style="display: none">
-            <a href="https://snowbook.herokuapp.com/" target="_blank">Heroku</a>
+            <a href="https://snowbook.herokuapp.com/" target="_blank"
+              ><img class="icon" src="assets/images/heroku.png" alt=""
+            /></a>
             <a
               href="https://github.com/RobWilliams0615/snowBook"
               target="_blank"
@@ -112,7 +117,9 @@
             alt=""
           />
           <div id="fourth-project-text" style="display: none">
-            <a href="https://greasy-camp.surge.sh/" target="_blank">Surge</a>
+            <a href="https://greasy-camp.surge.sh/" target="_blank"
+              ><img class="icon" src="assets/surge.png" alt=""
+            /></a>
             <a
               href="https://github.com/therealmikenew/MikesConnectFour"
               target="_blank"
