add About section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,25 @@
 
     <div id="about-container">
       <h1>About Me</h1>
-      <p>Stuff here</p>
+      <p>
+        I am a full-stack software engineer in New York City, born and raised in
+        Texas. I love using the MERN stack (MongoDB, Express, React.js, Node.js)
+        to build projects, and have also built full-stack applications using
+        Vue.js, PostgreSQL, and Django.
+      </p>
+      <br />
+      <p>
+        I have a background in editing and writing, which I have levaraged to
+        create precise and clean code. I love building applications on topics
+        that have meaning to me, like civics and literature.
+      </p>
+      <br />
+      <p>
+        I'm excited to continue learning about the constantly changing landscape
+        of tech, and to use these technologies to benefit companies and
+        institutions. I hope enjoy the projects I made, and feel free to reach
+        out.
+      </p>
     </div>
 
     <div id="projects-container">
