edit index.js, index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -32,26 +32,28 @@
     </div>
 
     <div id="about-container">
-      <h1>About Me</h1>
-      <p>
-        I am a full-stack software engineer in New York City, born and raised in
-        Texas. I love using the MERN stack (MongoDB, Express, React.js, Node.js)
-        to build projects, and have also built full-stack applications using
-        Vue.js, PostgreSQL, and Django.
-      </p>
-      <br />
-      <p>
-        I have a background in editing and writing, which I have levaraged to
-        create precise and clean code. I love building applications on topics
-        that have meaning to me, like civics and literature.
-      </p>
-      <br />
-      <p>
-        I'm excited to continue learning about the constantly changing landscape
-        of tech, and to use these technologies to benefit companies and
-        institutions. I hope enjoy the projects I made, and feel free to reach
-        out.
-      </p>
+      <h1 id="about-title">About Me</h1>
+      <div id="about-paragraphs" style="display: none">
+        <p>
+          I am a full-stack software engineer in New York City, born and raised
+          in Texas. I love using the MERN stack (MongoDB, Express, React.js,
+          Node.js) to build projects, and have also built full-stack
+          applications using Vue.js, PostgreSQL, and Django.
+        </p>
+        <br />
+        <p>
+          I have a background in editing and writing, which I have levaraged to
+          create precise and clean code. I love building applications on topics
+          that have meaning to me, like civics and literature.
+        </p>
+        <br />
+        <p>
+          I'm excited to continue learning about the constantly changing
+          landscape of tech, and to use these technologies to benefit companies
+          and institutions. I hope enjoy the projects I made, and feel free to
+          reach out.
+        </p>
+      </div>
     </div>
 
     <div id="projects-container">
@@ -68,6 +70,22 @@
           />
 
           <div id="first-project-text" style="display: none">
+            <p>
+              My So-Called Civic Life is an application that allows users to
+              find their local, state, and federal public servants, and keep
+              track of their legislative activity.
+            </p>
+            <h3>Technologies:</h3>
+            <img class="icon" src="assets/images/vue.png" alt="" /><img
+              class="icon"
+              src="assets/images/sequelize.png"
+              alt=""
+            /><img class="icon" src="assets/images/postgresql.png" alt="" /><img
+              class="icon"
+              src="assets/images/django.png"
+              alt=""
+            />
+
             <a
               href="https://my-so-called-civic-life.netlify.app/"
               target="_blank"
@@ -94,6 +112,19 @@
             alt=""
           />
           <div id="second-project-text" style="display: none">
+            <p>
+              My Very Graphic Novels allows users to discover comic books and
+              graphic novels from a curated list.
+            </p>
+            <h3>Technologies:</h3>
+            <img class="icon" src="assets/images/mongodb.png" alt="" />
+            <img class="icon" src="assets/images/mongoose.png" alt="" /><img
+              class="icon"
+              src="assets/images/express.png"
+              alt=""
+            /><img class="icon" src="assets/images/react.png" alt="" />
+            <img class="icon" src="assets/images/node.png" alt="" />
+
             <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
               ><img class="icon" src="assets/images/heroku.png" alt=""
             /></a>
@@ -136,7 +167,7 @@
           />
           <div id="fourth-project-text" style="display: none">
             <a href="https://greasy-camp.surge.sh/" target="_blank"
-              ><img class="icon" src="assets/surge.png" alt=""
+              ><img class="icon" src="assets/images/surge.png" alt=""
             /></a>
             <a
               href="https://github.com/therealmikenew/MikesConnectFour"
