--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   </head>
   <body>
     <div id="header-container">
-      <div id="header-photo">
+      <!-- <div id="header-photo">
         <img
           id="photo"
           src="https://i.imgur.com/qhXgZFB.png"
           alt="TheRealMikeNew's photo"
-          width="500"
         />
-      </div>
+      </div> -->
 
       <div id="header-description">
         <h1>Michael Newman</h1>
