edit index.js, index.html, styles.css; add function to Projects section q

--- a/index.html
+++ b/index.html
@@ -57,122 +57,186 @@
 
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
-      <div id="projects-links-container">
-        <div class="projects">
-          <h2>My So-Called Civic Life</h2>
 
-          <img
-            id="first-project"
-            class="project-image"
-            src="assets/images/MySoCalled.png"
-            alt=""
-          />
+      <div id="projects-list" style="display: none">
+        <div id="projects-links-container">
+          <div class="projects">
+            <h2>My So-Called Civic Life</h2>
 
-          <div id="first-project-text" style="display: none">
-            <p>
-              My So-Called Civic Life is an application that allows users to
-              find their local, state, and federal public servants, and keep
-              track of their legislative activity.
-            </p>
-            <h3>Technologies:</h3>
-            <img class="icon" src="assets/images/vue.png" alt="" /><img
-              class="icon"
-              src="assets/images/sequelize.png"
-              alt=""
-            /><img class="icon" src="assets/images/postgresql.png" alt="" /><img
-              class="icon"
-              src="assets/images/django.png"
+            <img
+              id="first-project"
+              class="project-image"
+              src="assets/images/MySoCalled.png"
               alt=""
             />
 
-            <a
-              href="https://my-so-called-civic-life.netlify.app/"
-              target="_blank"
-              ><img
-                class="icon"
-                src="assets/images/Netlify-Logo.wine.png"
-                alt=""
-            /></a>
-            <a
-              href="https://github.com/therealmikenew/my-so-called-civic-life"
-              target="_blank"
-              ><img class="icon" src="assets/images/github.png" alt=""
-            /></a>
+            <div id="first-project-text" style="display: none">
+              <p>
+                My So-Called Civic Life is an application that allows users to
+                find their local, state, and federal public servants, and keep
+                track of their legislative activity.
+              </p>
+
+              <div class="tech-icons-container">
+                <div class="tech-icons-container-1">
+                  <img class="icon" src="assets/images/vue.png" alt="" /><img
+                    class="icon"
+                    src="assets/images/sequelize.png"
+                    alt=""
+                  /><img
+                    class="icon"
+                    src="assets/images/postgresql.png"
+                    alt=""
+                  /><img class="icon" src="assets/images/django.png" alt="" />
+                </div>
+
+                <div class="tech-icons-container-2">
+                  <a
+                    href="https://my-so-called-civic-life.netlify.app/"
+                    target="_blank"
+                    ><img
+                      class="icon"
+                      src="assets/images/Netlify-Logo.wine.png"
+                      alt=""
+                  /></a>
+                  <a
+                    href="https://github.com/therealmikenew/my-so-called-civic-life"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/github.png" alt=""
+                  /></a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="projects">
-          <h2>My Very Graphic Novels</h2>
+          <div class="projects">
+            <h2>My Very Graphic Novels</h2>
 
-          <img
-            id="second-project"
-            class="project-image"
-            src="assets/images/MyVeryGraphic.png"
-            alt=""
-          />
-          <div id="second-project-text" style="display: none">
-            <p>
-              My Very Graphic Novels allows users to discover comic books and
-              graphic novels from a curated list.
-            </p>
-            <h3>Technologies:</h3>
-            <img class="icon" src="assets/images/mongodb.png" alt="" />
-            <img class="icon" src="assets/images/mongoose.png" alt="" /><img
-              class="icon"
-              src="assets/images/express.png"
+            <img
+              id="second-project"
+              class="project-image"
+              src="assets/images/MyVeryGraphic.png"
               alt=""
-            /><img class="icon" src="assets/images/react.png" alt="" />
-            <img class="icon" src="assets/images/node.png" alt="" />
+            />
+            <div id="second-project-text" style="display: none">
+              <p>
+                My Very Graphic Novels allows users to discover comic books and
+                graphic novels from a curated list.
+              </p>
 
-            <a href="https://myverygraphicnovels.herokuapp.com/" target="_blank"
-              ><img class="icon" src="assets/images/heroku.png" alt=""
-            /></a>
-            <a
-              href="https://github.com/therealmikenew/MyVeryGraphicNovels"
-              target="_blank"
-              ><img class="icon" src="assets/images/github.png" alt=""
-            /></a>
+              <div class="tech-icons-container">
+                <div class="tech-icons-container-1">
+                  <img class="icon" src="assets/images/mongodb.png" alt="" />
+                  <img
+                    class="icon"
+                    src="assets/images/mongoose.png"
+                    alt=""
+                  /><img
+                    class="icon"
+                    src="assets/images/express.png"
+                    alt=""
+                  /><img class="icon" src="assets/images/react.png" alt="" />
+                  <img class="icon" src="assets/images/node.png" alt="" />
+                </div>
+                <div class="tech-icons-container-2">
+                  <a
+                    href="https://myverygraphicnovels.herokuapp.com/"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/heroku.png" alt=""
+                  /></a>
+                  <a
+                    href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/github.png" alt=""
+                  /></a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="projects">
-          <h2>snowBook</h2>
-          <img
-            id="third-project"
-            class="project-image"
-            src="assets/images/snowBook.png"
-            alt=""
-          />
+          <div class="projects">
+            <h2>snowBook</h2>
+            <img
+              id="third-project"
+              class="project-image"
+              src="assets/images/snowBook.png"
+              alt=""
+            />
 
-          <div id="third-project-text" style="display: none">
-            <a href="https://snowbook.herokuapp.com/" target="_blank"
-              ><img class="icon" src="assets/images/heroku.png" alt=""
-            /></a>
-            <a
-              href="https://github.com/RobWilliams0615/snowBook"
-              target="_blank"
-              ><img class="icon" src="assets/images/github.png" alt=""
-            /></a>
+            <div id="third-project-text" style="display: none">
+              <p>
+                snowBook is a social media application designed for both
+                newcomers interested in snow sports and for experienced snow
+                sport enthusiasts to connect and find activities and events.
+              </p>
+
+              <div class="tech-icons-container">
+                <div class="tech-icons-container-1">
+                  <img class="icon" src="assets/images/mongodb.png" alt="" />
+                  <img
+                    class="icon"
+                    src="assets/images/mongoose.png"
+                    alt=""
+                  /><img
+                    class="icon"
+                    src="assets/images/express.png"
+                    alt=""
+                  /><img class="icon" src="assets/images/react.png" alt="" />
+                  <img class="icon" src="assets/images/node.png" alt="" />
+                </div>
+                <div class="tech-icons-container-2">
+                  <a
+                    href="https://myverygraphicnovels.herokuapp.com/"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/heroku.png" alt=""
+                  /></a>
+                  <a
+                    href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/github.png" alt=""
+                  /></a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="projects">
-          <h2>Mike's Connect Four</h2>
-          <img
-            id="fourth-project"
-            class="project-image"
-            src="assets/images/ConnectFour.png"
-            alt=""
-          />
-          <div id="fourth-project-text" style="display: none">
-            <a href="https://greasy-camp.surge.sh/" target="_blank"
-              ><img class="icon" src="assets/images/surge.png" alt=""
-            /></a>
-            <a
-              href="https://github.com/therealmikenew/MikesConnectFour"
-              target="_blank"
-              ><img class="icon" src="assets/images/github.png" alt=""
-            /></a>
+          <div class="projects">
+            <h2>Mike's Connect Four</h2>
+            <img
+              id="fourth-project"
+              class="project-image"
+              src="assets/images/ConnectFour.png"
+              alt=""
+            />
+
+            <div id="fourth-project-text" style="display: none">
+              <p>
+                Mike's Connect Four is an online version of Milton Bradley's
+                Connect Four. Players can toggle between one-player or
+                two-player mode.
+              </p>
+
+              <div class="tech-icons-container">
+                <div class="tech-icons-container-1">
+                  <img class="icon" src="assets/images/html.png" alt="" />
+                  <img class="icon" src="assets/images/css.png" alt="" /><img
+                    class="icon"
+                    src="assets/images/javascript.png"
+                    alt=""
+                  />
+                </div>
+                <div class="tech-icons-container-2">
+                  <a href="https://greasy-camp.surge.sh/" target="_blank"
+                    ><img class="icon" src="assets/images/surge.png" alt=""
+                  /></a>
+                  <a
+                    href="https://github.com/therealmikenew/MikesConnectFour"
+                    target="_blank"
+                    ><img class="icon" src="assets/images/github.png" alt=""
+                  /></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
