edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
   </head>
   <body>
     <div id="header-container">
-      <!-- <div id="header-photo">
-        <img
-          id="photo"
-          src="https://i.imgur.com/qhXgZFB.png"
-          alt="TheRealMikeNew's photo"
-        />
-      </div> -->
-
       <div id="header-description">
         <h1>Michael Newman</h1>
         <h2>Software Engineer</h2>
@@ -43,15 +35,28 @@
         <p>
           I have a background in editing and writing, which I have levaraged to
           create precise and clean code. I love building applications on topics
-          that have meaning to me, like civics and literature.
+          that have meaning to me, like civics and literature. I'm excited to
+          continue learning about the constantly changing tech landscape.
         </p>
         <br />
         <p>
-          I'm excited to continue learning about the constantly changing
-          landscape of tech, and to use these technologies to benefit companies
-          and institutions. I hope enjoy the projects I made, and feel free to
-          reach out.
+          I forward to using my skills to develop software and create
+          applications to benefit companies and institutions. I hope you enjoy
+          the projects I made, and feel free to reach out.
         </p>
+        <br />
+
+        <span class="icons">
+          <a href="https://github.com/therealmikenew" target="_blank">
+            <img class="icon" src="assets/images/github.png" alt=""
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/therealmichaelnewman/"
+            target="_blank"
+          >
+            <img class="icon" src="assets/images/LI-In-Bug.png" alt=""
+          /></a>
+        </span>
       </div>
     </div>
 
@@ -245,6 +250,12 @@
     <footer id="footer-container">
       <a href="https://github.com/therealmikenew" target="_blank">
         <img class="icon" src="assets/images/github.png" alt=""
+      /></a>
+      <a
+        href="https://www.linkedin.com/in/therealmichaelnewman/"
+        target="_blank"
+      >
+        <img class="icon" src="assets/images/LI-In-Bug.png" alt=""
       /></a>
     </footer>
     <script src="index.js"></script>
