--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
         <br />
         <p>
-          I forward to using my skills to develop software and create
+          I look forward to using my skills to develop software and create
           applications to benefit companies and institutions. I hope you enjoy
           the projects I made, and feel free to reach out.
         </p>
