--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>TheRealMikeNew's Portfolio</title>
+    <title>therealmikenew's portfolio</title>
   </head>
   <body>
     <div id="header-container">
