--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <div id="about-container">
       <h1 id="about-title">About Me</h1>
+
       <div id="about-paragraphs" style="display: none">
+        <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
         <p>
           I am a full-stack software engineer in New York City, born and raised
           in Texas. I love using the MERN stack (MongoDB, Express, React.js,
@@ -42,19 +44,20 @@
         <p>
           I look forward to using my skills to develop software and create
           applications to benefit companies and institutions. I hope you enjoy
-          the projects I made, and feel free to reach out.
+          the projects I made. Feel free to reach out to me via LinkedIn, and
+          check out more of my projects on my GitHub page.
         </p>
         <br />
 
         <span class="icons">
           <a href="https://github.com/therealmikenew" target="_blank">
-            <img class="icon" src="assets/images/github.png" alt=""
+            <img class="icon-link" src="assets/images/github.png" alt=""
           /></a>
           <a
             href="https://www.linkedin.com/in/therealmichaelnewman/"
             target="_blank"
           >
-            <img class="icon" src="assets/images/LI-In-Bug.png" alt=""
+            <img class="icon-link" src="assets/images/LI-In-Bug.png" alt=""
           /></a>
         </span>
       </div>
@@ -82,8 +85,27 @@
                 track of their legislative activity.
               </p>
 
+              <p>
+                I used Vue.js, a JavaScript framework, as well as PostgreSQL and
+                Django. The application has full CRUD (create, read, update,
+                delete) functionality. Real-time data is provided by external
+                API calls utilizing the
+                <a
+                  href="https://developers.google.com/civic-information"
+                  target="_blank"
+                  >Google Civic Information API</a
+                >
+                and the
+                <a
+                  href="https://projects.propublica.org/api-docs/congress-api/"
+                  target="_blank"
+                  >ProPublica Congress API</a
+                >.
+              </p>
+
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
+                  <h4>Technologies:</h4>
                   <img class="icon" src="assets/images/vue.png" alt="" /><img
                     class="icon"
                     src="assets/images/sequelize.png"
@@ -93,22 +115,37 @@
                     src="assets/images/postgresql.png"
                     alt=""
                   /><img class="icon" src="assets/images/django.png" alt="" />
+                  <img
+                    class="icon"
+                    src="assets/images/vuesax-Imagotipo black vertical.png"
+                    alt=""
+                  />
                 </div>
 
                 <div class="tech-icons-container-2">
-                  <a
-                    href="https://my-so-called-civic-life.netlify.app/"
-                    target="_blank"
-                    ><img
-                      class="icon"
-                      src="assets/images/Netlify-Logo.wine.png"
-                      alt=""
-                  /></a>
-                  <a
-                    href="https://github.com/therealmikenew/my-so-called-civic-life"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/github.png" alt=""
-                  /></a>
+                  <div class="site-link">
+                    <h3>View site:</h3>
+                    <a
+                      href="https://my-so-called-civic-life.netlify.app/"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/Netlify-Logo.wine.png"
+                        alt=""
+                    /></a>
+                  </div>
+
+                  <div class="github-link">
+                    <h3>View code:</h3>
+                    <a
+                      href="https://github.com/therealmikenew/my-so-called-civic-life"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/github.png"
+                        alt=""
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -128,9 +165,15 @@
                 My Very Graphic Novels allows users to discover comic books and
                 graphic novels from a curated list.
               </p>
+              <p>
+                The application uses the MERN (MongoDB, Express, React.js,
+                Node.js) stack. I used Mongoose to create models and build
+                queries, and the application hits all REST API calls.
+              </p>
 
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
+                  <h4>Technologies:</h4>
                   <img class="icon" src="assets/images/mongodb.png" alt="" />
                   <img
                     class="icon"
@@ -144,16 +187,28 @@
                   <img class="icon" src="assets/images/node.png" alt="" />
                 </div>
                 <div class="tech-icons-container-2">
-                  <a
-                    href="https://myverygraphicnovels.herokuapp.com/"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/heroku.png" alt=""
-                  /></a>
-                  <a
-                    href="https://github.com/therealmikenew/MyVeryGraphicNovels"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/github.png" alt=""
-                  /></a>
+                  <div class="site-link">
+                    <h3>View site:</h3>
+                    <a
+                      href="https://myverygraphicnovels.herokuapp.com/"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/heroku.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="github-link">
+                    <h3>View code:</h3>
+                    <a
+                      href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/github.png"
+                        alt=""
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -174,9 +229,14 @@
                 newcomers interested in snow sports and for experienced snow
                 sport enthusiasts to connect and find activities and events.
               </p>
+              <p>
+                This MERN application has full CRUD operations and utilizes
+                Firebase for login functionality.
+              </p>
 
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
+                  <h4>Technologies:</h4>
                   <img class="icon" src="assets/images/mongodb.png" alt="" />
                   <img
                     class="icon"
@@ -190,16 +250,28 @@
                   <img class="icon" src="assets/images/node.png" alt="" />
                 </div>
                 <div class="tech-icons-container-2">
-                  <a
-                    href="https://myverygraphicnovels.herokuapp.com/"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/heroku.png" alt=""
-                  /></a>
-                  <a
-                    href="https://github.com/therealmikenew/MyVeryGraphicNovels"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/github.png" alt=""
-                  /></a>
+                  <div class="site-link">
+                    <h3>View site:</h3>
+                    <a
+                      href="https://myverygraphicnovels.herokuapp.com/"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/heroku.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="github-link">
+                    <h3>View code:</h3>
+                    <a
+                      href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/github.png"
+                        alt=""
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -217,12 +289,16 @@
             <div id="fourth-project-text" style="display: none">
               <p>
                 Mike's Connect Four is an online version of Milton Bradley's
-                Connect Four. Players can toggle between one-player or
-                two-player mode.
+                Connect Four.
+              </p>
+              <p>
+                This game will built solely using HTML, CSS, and vanilla
+                JavaScript.
               </p>
 
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
+                  <h4>Technologies:</h4>
                   <img class="icon" src="assets/images/html.png" alt="" />
                   <img class="icon" src="assets/images/css.png" alt="" /><img
                     class="icon"
@@ -231,14 +307,26 @@
                   />
                 </div>
                 <div class="tech-icons-container-2">
-                  <a href="https://greasy-camp.surge.sh/" target="_blank"
-                    ><img class="icon" src="assets/images/surge.png" alt=""
-                  /></a>
-                  <a
-                    href="https://github.com/therealmikenew/MikesConnectFour"
-                    target="_blank"
-                    ><img class="icon" src="assets/images/github.png" alt=""
-                  /></a>
+                  <div class="site-link">
+                    <h3>View site:</h3>
+                    <a href="https://greasy-camp.surge.sh/" target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/surge.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="github-link">
+                    <h3>View code:</h3>
+                    <a
+                      href="https://github.com/therealmikenew/MikesConnectFour"
+                      target="_blank"
+                      ><img
+                        class="icon-link"
+                        src="assets/images/github.png"
+                        alt=""
+                    /></a>
+                  </div>
                 </div>
               </div>
             </div>
