edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -252,9 +252,7 @@
                 <div class="tech-icons-container-2">
                   <div class="site-link">
                     <h3>View site:</h3>
-                    <a
-                      href="https://myverygraphicnovels.herokuapp.com/"
-                      target="_blank"
+                    <a href="https://snowbook.herokuapp.com/" target="_blank"
                       ><img
                         class="icon-link"
                         src="assets/images/heroku.png"
@@ -336,6 +334,7 @@
     </div>
 
     <footer id="footer-container">
+      <p>Designed by therealmikenew</p>
       <a href="https://github.com/therealmikenew" target="_blank">
         <img class="icon" src="assets/images/github.png" alt=""
       /></a>
