edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     </div>
 
     <footer id="footer-container">
-      <p>Designed by therealmikenew</p>
+      <p id="footer-text">Designed by therealmikenew</p>
       <a href="https://github.com/therealmikenew" target="_blank">
         <img class="icon" src="assets/images/github.png" alt=""
       /></a>
