edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div id="header-container">
       <div id="header-description">
-        <h1>Michael Newman</h1>
-        <h2>Software Engineer</h2>
+        <h1 id="header-name">Michael Newman</h1>
+        <h2 id="header-title">Software Engineer</h2>
       </div>
     </div>
 
@@ -91,12 +91,14 @@
                 delete) functionality. Real-time data is provided by external
                 API calls utilizing the
                 <a
+                  class="proj-links"
                   href="https://developers.google.com/civic-information"
                   target="_blank"
                   >Google Civic Information API</a
                 >
                 and the
                 <a
+                  class="proj-links"
                   href="https://projects.propublica.org/api-docs/congress-api/"
                   target="_blank"
                   >ProPublica Congress API</a
