add Google Drive icon; fix typos; add favicon; add hover effects

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/favicon-16x16.png"
+    />
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
 
-    <title>therealmikenew's portfolio</title>
+    <title>TheRealMikeNew's Portfolio</title>
   </head>
   <body>
     <div id="header-container">
@@ -44,8 +62,9 @@
         <p>
           I look forward to using my skills to develop software and create
           applications to benefit companies and institutions. I hope you enjoy
-          the projects I made. Feel free to reach out to me via LinkedIn, and
-          check out more of my projects on my GitHub page.
+          the projects I made. Click on the icons below to check out more of my
+          projects on GitHub, and to reach me via LinkedIn or through the
+          contact information on my resume.
         </p>
         <br />
 
@@ -58,6 +77,15 @@
             target="_blank"
           >
             <img class="icon-link" src="assets/images/LI-In-Bug.png" alt=""
+          /></a>
+          <a
+            href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
+            target="_blank"
+          >
+            <img
+              class="icon-link"
+              src="assets/images/Google_Drive_logo.png"
+              alt=""
           /></a>
         </span>
       </div>
@@ -232,19 +260,16 @@
                 sport enthusiasts to connect and find activities and events.
               </p>
               <p>
-                This MERN application has full CRUD operations and utilizes
+                This application utilized the PERN (PostgreSQL, Express,
+                React.js, Node.js) stack, has full CRUD operations, and utilizes
                 Firebase for login functionality.
               </p>
 
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
                   <h4>Technologies:</h4>
-                  <img class="icon" src="assets/images/mongodb.png" alt="" />
+                  <img class="icon" src="assets/images/postgresql.png" alt="" />
                   <img
-                    class="icon"
-                    src="assets/images/mongoose.png"
-                    alt=""
-                  /><img
                     class="icon"
                     src="assets/images/express.png"
                     alt=""
@@ -264,7 +289,7 @@
                   <div class="github-link">
                     <h3>View code:</h3>
                     <a
-                      href="https://github.com/therealmikenew/MyVeryGraphicNovels"
+                      href="https://github.com/RobWilliams0615/snowBook"
                       target="_blank"
                       ><img
                         class="icon-link"
@@ -292,8 +317,9 @@
                 Connect Four.
               </p>
               <p>
-                This game will built solely using HTML, CSS, and vanilla
-                JavaScript.
+                The game was built solely using HTML, CSS, and vanilla
+                JavaScript. The game can toggle quickly between one-player and
+                two-player mode.
               </p>
 
               <div class="tech-icons-container">
@@ -345,6 +371,12 @@
         target="_blank"
       >
         <img class="icon" src="assets/images/LI-In-Bug.png" alt=""
+      /></a>
+      <a
+        href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
+        target="_blank"
+      >
+        <img class="icon" src="assets/images/Google_Drive_logo.png" alt=""
       /></a>
     </footer>
     <script src="index.js"></script>
