update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
 
-      <div id="projects-list" style="display: block">
+      <div id="projects-list" style="display: none">
         <div id="projects-links-container">
           <div class="projects">
             <h2 class="project-title-header">My So-Called Civic Life</h2>
