--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       sizes="16x16"
       href="assets/images/favicon-16x16.png"
     />
+    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
 
     <title>TheRealMikeNew's Portfolio</title>
   </head>
@@ -44,31 +45,27 @@
 
       <div id="about-paragraphs" style="display: none">
         <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
-        <div id="about-paragraphs-container">
-          <p>
-            I am a full-stack software engineer in New York City, born and
-            raised in Texas. I love using the MERN stack (MongoDB, Express,
-            React.js, Node.js) to build projects, and have also built full-stack
-            applications using Vue.js, PostgreSQL, and Django.
-          </p>
-          <br />
-          <p>
-            I have a background in editing and writing, which I have levaraged
-            to create precise and clean code. I love building applications on
-            topics that have meaning to me, like civics and literature. I'm
-            excited to continue learning about the constantly changing tech
-            landscape.
-          </p>
-          <br />
-          <p>
-            I look forward to using my skills to develop software and create
-            applications to benefit companies and institutions. I hope you enjoy
-            the projects I made. Click on the icons below to check out more of
-            my projects on GitHub, and to reach me via LinkedIn or through the
-            contact information on my resume.
-          </p>
-        </div>
-
+        <p>
+          I am a full-stack software engineer in New York City, born and raised
+          in Texas. I love using the MERN stack (MongoDB, Express, React.js,
+          Node.js) to build projects, and have also built full-stack
+          applications using Vue.js, PostgreSQL, and Django.
+        </p>
+        <br />
+        <p>
+          I have a background in editing and writing, which I have levaraged to
+          create precise and clean code. I love building applications on topics
+          that have meaning to me, like civics and literature. I'm excited to
+          continue learning about the constantly changing tech landscape.
+        </p>
+        <br />
+        <p>
+          I look forward to using my skills to develop software and create
+          applications to benefit companies and institutions. I hope you enjoy
+          the projects I made. Click on the icons below to check out more of my
+          projects on GitHub, and to reach me via LinkedIn or through the
+          contact information on my resume.
+        </p>
         <br />
 
         <span class="icons">
@@ -100,7 +97,7 @@
       <div id="projects-list" style="display: none">
         <div id="projects-links-container">
           <div class="projects">
-            <h2 class="project-title-header">My So-Called Civic Life</h2>
+            <h2>My So-Called Civic Life</h2>
 
             <img
               id="first-project"
@@ -185,7 +182,7 @@
           </div>
 
           <div class="projects">
-            <h2 class="project-title-header">My Very Graphic Novels</h2>
+            <h2>My Very Graphic Novels</h2>
 
             <img
               id="second-project"
@@ -248,7 +245,7 @@
           </div>
 
           <div class="projects">
-            <h2 class="project-title-header">snowBook</h2>
+            <h2>snowBook</h2>
             <img
               id="third-project"
               class="project-image"
@@ -306,7 +303,7 @@
           </div>
 
           <div class="projects">
-            <h2 class="project-title-header">Mike's Connect Four</h2>
+            <h2>Mike's Connect Four</h2>
             <img
               id="fourth-project"
               class="project-image"
