--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/images/apple-touch-icon.png"
@@ -28,7 +32,6 @@
       sizes="16x16"
       href="assets/images/favicon-16x16.png"
     />
-    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
 
     <title>TheRealMikeNew's Portfolio</title>
   </head>
@@ -43,29 +46,34 @@
     <div id="about-container">
       <h1 id="about-title">About Me</h1>
 
-      <div id="about-paragraphs" style="display: none">
+      <div id="about-paragraphs" style="display: block">
         <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
-        <p>
-          I am a full-stack software engineer in New York City, born and raised
-          in Texas. I love using the MERN stack (MongoDB, Express, React.js,
-          Node.js) to build projects, and have also built full-stack
-          applications using Vue.js, PostgreSQL, and Django.
-        </p>
-        <br />
-        <p>
-          I have a background in editing and writing, which I have levaraged to
-          create precise and clean code. I love building applications on topics
-          that have meaning to me, like civics and literature. I'm excited to
-          continue learning about the constantly changing tech landscape.
-        </p>
-        <br />
-        <p>
-          I look forward to using my skills to develop software and create
-          applications to benefit companies and institutions. I hope you enjoy
-          the projects I made. Click on the icons below to check out more of my
-          projects on GitHub, and to reach me via LinkedIn or through the
-          contact information on my resume.
-        </p>
+
+        <div id="about-paragraphs-container">
+          <p>
+            I am a full-stack software engineer in New York City, born and
+            raised in Texas. I love using the MERN stack (MongoDB, Express,
+            React.js, Node.js) to build projects, and have also built full-stack
+            applications using Vue.js, PostgreSQL, and Django.
+          </p>
+          <br />
+          <p>
+            I have a background in editing and writing, which I have levaraged
+            to create precise and clean code. I love building applications on
+            topics that have meaning to me, like civics and literature. I'm
+            excited to continue learning about the constantly changing tech
+            landscape.
+          </p>
+          <br />
+          <p>
+            I look forward to using my skills to develop software and create
+            applications to benefit companies and institutions. I hope you enjoy
+            the projects I made. Click on the icons below to check out more of
+            my projects on GitHub, and to reach me via LinkedIn or through the
+            contact information on my resume.
+          </p>
+        </div>
+
         <br />
 
         <span class="icons">
@@ -94,10 +102,10 @@
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
 
-      <div id="projects-list" style="display: none">
+      <div id="projects-list" style="display: block">
         <div id="projects-links-container">
           <div class="projects">
-            <h2>My So-Called Civic Life</h2>
+            <h2 class="projects-headers">My So-Called Civic Life</h2>
 
             <img
               id="first-project"
@@ -182,7 +190,7 @@
           </div>
 
           <div class="projects">
-            <h2>My Very Graphic Novels</h2>
+            <h2 class="projects-headers">My Very Graphic Novels</h2>
 
             <img
               id="second-project"
@@ -245,7 +253,7 @@
           </div>
 
           <div class="projects">
-            <h2>snowBook</h2>
+            <h2 class="projects-headers">snowBook</h2>
             <img
               id="third-project"
               class="project-image"
@@ -303,7 +311,7 @@
           </div>
 
           <div class="projects">
-            <h2>Mike's Connect Four</h2>
+            <h2 class="projects-headers">Mike's Connect Four</h2>
             <img
               id="fourth-project"
               class="project-image"
