edit media queries

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       href="assets/images/favicon-16x16.png"
     />
 
-    <title>TheRealMikeNew's Portfolio</title>
+    <title>TheRealMikeNew | Software Engineer</title>
   </head>
   <body>
     <div id="header-container">
@@ -46,7 +46,7 @@
     <div id="about-container">
       <h1 id="about-title">About Me</h1>
 
-      <div id="about-paragraphs" style="display: block">
+      <div id="about-paragraphs" style="display: none">
         <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
 
         <div id="about-paragraphs-container">
@@ -102,7 +102,7 @@
     <div id="projects-container">
       <h1 id="projects-title">Projects</h1>
 
-      <div id="projects-list" style="display: block">
+      <div id="projects-list" style="display: none">
         <div id="projects-links-container">
           <div class="projects">
             <h2 class="projects-headers">My So-Called Civic Life</h2>
